infrastructure/k8s/blog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: okeefem/blog:latest
