infrastructure/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-service
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
        - name: comments-service
          image: okeefem/comments-service:latest
