infrastructure/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: okeefem/moderation-service:latest
