infrastructure/k8s/posts.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts-service
spec:
  containers:
    - name: posts
      image: microservices_posts-service:latest
