infrastructure/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: okeefem/query-service:latest
