infrastructure/k8s/blog-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: NodePort
  selector:
    app: blog
  ports:
    - name: blog
      protocol: TCP
      port: 80 # Service port
      targetPort: 80 # Container port
