infrastructure/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: NodePort
  selector:
    app: comments-service
  ports:
    - name: comments-service
      protocol: TCP
      port: 4001 # Service port
      targetPort: 4001 # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service-internal
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: comments-service
  ports:
    - name: comments-service
      protocol: TCP
      port: 4001 # Service port
      targetPort: 4001 # Container port
