infrastructure/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: okeefem/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Service port
      targetPort: 4005 # Container port
