infrastructure/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: NodePort
  selector:
    app: moderation-service
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4003 # Service port
      targetPort: 4003 # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service-internal
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: moderation-service
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4003 # Service port
      targetPort: 4003 # Container port
