infrastructure/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort
  selector:
    app: posts-service
  ports:
    - name: posts-service
      protocol: TCP
      port: 4000 # Service port
      targetPort: 4000 # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service-internal
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: posts-service
  ports:
    - name: posts-service
      protocol: TCP
      port: 4000 # Service port
      targetPort: 4000 # Container port
