infrastructure/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:
    app: query-service
  ports:
    - name: query-service
      protocol: TCP
      port: 4002 # Service port
      targetPort: 4002 # Container port
---
apiVersion: v1
kind: Service
metadata:
  name: query-service-internal
spec:
  type: ClusterIP # This is the default btw
  selector:
    app: query-service
  ports:
    - name: query-service
      protocol: TCP
      port: 4002 # Service port
      targetPort: 4002 # Container port
